@startuml

!include stylesheet.iuml

rectangle spring-data-comments-2.1.0.RELEASE.jar as spring {

    namespace org.springframework.data.repository {
        interface CrudRepository <T, ID> <<Spring>>{
            <S extends T> +save(S) : S
            <S extends T> +saveAll(Iterable<S​>) : Iterable<S>
            +findById(ID) : Optional<T>
            +existsById(ID) : boolean
            +findAll() : Iterable<T>
            +findAllById(Iterable<ID>) : Iterable<T>
            +count() : long
            +deleteById(ID) : void
            +delete(T) : void
            +deleteAll(Iterable<? extends T>) : void
            +deleteAll() : void
        }
    }
}

rectangle salespoint-framework-7.0.0.RELEASE.jar {
    namespace org.salespointframework.order {
        interface OrderManager <T extends Order> <<Salespoint>>{
            +cancelOrder(T) : boolean
            +completeOrder(T) : void
            +contains(OrderIdentifier) : boolean
            +findBy(OrderStatus) : Streamable<T>
            +get(OrderIdentifier) : Optional<T>
            +save(T) : T
        }

        class Order <<Salespoint>>{
            -orderIdentifier : OrderIdentifier
            -paymentMethod : PaymentMethod
            -userAccount : UserAccount
            -dateCreated : LocalDateTime
            -orderStatus : OrderStatus
            -orderLines : Set<OrderLine>
            -chargeLines : Set<ChargeLines>

            +Order(UserAccount)
            +add(ChargeLine) : void
            +remove(ChargeLine) : void
            +getChargeLines() : Streamable<ChargeLine>
            +getChargeLinesPrice() : MonetaryAmount
            +add(OrderLine) : void
            +remove(OrderLine) : void
            +getOrderLines() : Streamable<OrderLine>
            +getOrderedLinesPrice() : MonetaryAmount
            +getDateCreated() : LocalDateTime
            +getId() : OrderIdentifier
            +getOrderStatus() : OrderStatus
            +getTotalPrice() : MonetaryAmount
            +isOpen() : boolean
            +isPaid() : boolean
            +isCompleted() : boolean
            +isCancelled() : boolean
            +complete() : Order
            +cancel() : void
            +getNumberOfLineItems() : int
            +markPaid() : Order
            -assertOrderIsOpen() : void
        }

        class Cart <<Salespoint>>{
            +addItemTo(Order) : Order
            +addOrUpdateItem(Product, long) : CartItem
            +addOrUpdateItem(Product, Quantity) : CartItem+
            +clear() : void
            +createOrderFor(UserAccount) : Order
            +getItem(String) : Optional<CartItem>
            +getPrice() : MonetaryAmount
            +isEmpty() : boolean
            +iterator() : Iterator<CartItem>
            +removeItem(String) : Optional<CartItem>
            +sumUp(Iterable<? extends Priced> priced)
        }

        class CartItem <<Salespoint>>{
            +getID() : String
            +getPrice() : MonetaryAmount
            +getProduct() : Product
            +getProductName() : String
            +getQuantity() : Quantity
            +hashCode() : int
            +sumUp(Iterable<? extends Priced>) : MonetaryAmount
        }

        class OrderLine <<Salespoint>> {
            +getId() : OrderLineIdentifier
            +getPrice() : MonetaryAmount
            +getProductIdentifier() : ProductIdentifier
            +getProductName() : String
            +getQuantity() : Quantity
            +sumUp(Iterable<? extends Priced>) : MonetaryAmount
        }

        class ChargeLine <<Salespoint>> {
            getId() : ChargeLineIdentifier
            sumUp(Iterable<? extends Priced>) : MonetaryAmount
        }

        enum OrderStatus <<Salespoint>>{
            CANCELLED
            COMPLETED
            OPEN
            PAID

            {static} valueOf(String) : OrderStatus
            {static} values() : OrderStatus[]
        }

        interface OrderRepository <T extends Order> <<Salespoint>> {
            +findByDateCreatedBetween(LocalDateTime, LocalDateTime) : Streamable<T>
            +findByOrderStatus(OrderStatus) : Streamable<T>
            +findByUserAccount(UserAccount) : Streamable<T>
            +findByUserAccountAndDateCreatedBetween(UserAccount, LocalDateTime, LocalDateTime) : Streamable<T>
        }
         OrderRepository -up-|> org.springframework.data.repository.CrudRepository: <<binds>>\n <T extends Order, OrderIdentifier>


        Order  -->  OrderStatus
        Order  -->  OrderLine
        Order  --> ChargeLine
        Cart  *--  CartItem
        Order  o--  OrderManager
    }

    namespace org.salespointframework.support {
        class ConsoleWritingMailSender <<Salespoint>>{

        }

        class RecordingMailSender <<Salespoint>>{

        }

    }

}




namespace org.salespointframework.context {
        class ApplicationEvent <<Salespoint>>{

        }

    }

rectangle Bioladen {

    namespace bioladen.order {

        class OrderController <<Controller>> {
            -orderRepository : DistributorOrderRepository
            -distributorProductCatalog : DistributorProductCatalog
            -inventoryProductCatalog : InventoryProductCatalog
            -orderManager : OrderManager
            +orders(Model) : String
            +deleteOrder(long) : String
            +completeOrder(long) : String
            +order(Model, String, Integer) : String
            +BestPriceInfo()
            +getInventoryAmount(DistributorProduct) : long
            +smaller<Comparable -> T>(T , T) : T
            +completeOrder(Model, OrderCart, Optional<UserAccount>) : String
            +removeOrder(Model, String, OrderCart) : String
            +addItem(Model, OrderCart, Long, Integer, Optional<DistributorProduct> : String
            +initializeCart() : OrderCart
            }

        class DistributorOrder <<Entity>> {
            - id : long
            - distributor : Distributor
            - userAccount : UserAccount
            - items : List<OrderItem>
            +DistributorOrder(UserAccount, Distributor)
            +addItems(OrderCart, OrderManager)
            +getPrice() : MonetaryAmount
            }

        class OrderCartItem <<Entity>>{
            -id : String
            -price : BigDecimal
            -quantity : BigDecimal
            -product : DistibutorProduct
            +OrderCartItem(String, Quantity, DistributorProduct)
            +getProductName() : String
            +add(Quantity) : OrderCartItem
            }

        class OrderCart <<Entity>>{
            -items : Map <DistributorProduct, OrderCartItem>
            +getPrice() : MonetaryAmount
            +addOrUpdateItem(DistributorProduct, Quantity) : OrderCartItem
            +addOrUpdateItem(DistributorProduct, long) : OrderCartItem
            +addOrUpdateItem(DistributorProduct, double) : OrderCartItem
            +removeItem(String) : Optional<OrderCartItem>
            +getItem(String) : Optional<OrderCartItem>
            +iterator() : Iterator
            +clear()
            }

        class OrderItem <<Entity>>{
            - id : long
            - price : BigDecimal
            - quantity : Quantity
            - product : DistributorProduct
            + OrderItem(Quantity, DistributorProduct)
            }

        class OrderManager <<Service>>{
            -distributorOrderRepository : DistributorOrderRepository
            -orderItemRepository : OrderItemRepository
            +createOrderItem(DistributorProduct, Quantity) : OrderItem
            +delete(DistributorOrder)
            +createOrder(DistributorOrder)
            }

        interface DistributorOrderRepository <<Repository>> extends org.springframework.data.repository.CrudRepository {
        }

        interface OrderItemRepository <<Repository>> extends org.springframework.data.repository.CrudRepository {
        }


        OrderCart "1"  *-- "*" OrderCartItem
        DistributorOrder "1" *-- "*" OrderItem

        OrderManager --> OrderItemRepository
        OrderManager --> DistributorOrderRepository
        OrderManager "1" -- "*" DistributorOrder
        OrderController o-- OrderManager
        OrderController --> OrderCart



    }

    namespace bioladen.event {
        class EntityCreatedEvent {

        }

        org.salespointframework.context.ApplicationEvent <|-- bioladen.event.EntityCreatedEvent
    }

    namespace bioladen.product {



        interface DistributorProductCatalog <<Repository>> {

        }

        bioladen.order.OrderController --> DistributorProductCatalog



    }


    namespace ressources.templates {

        VIEW(order.html) {

        }

        VIEW(orderfinished.html) {

        }

        VIEW(orderoverview.html) {

        }

        bioladen.order.OrderController --> order.html
        bioladen.order.OrderController --> orderfinished.html
        bioladen.order.OrderController --> orderoverview.html

    }

}

@enduml